examples/bad/unknown_id_2.ez
f : Integer -> Integer;
f = lambda: x -> t * 2;

main : Integer;
main = f 2;